--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     body {
       margin: 0;
       overflow: hidden;
-      background-color: #eef;
+      background-color: #e8e8f8;
       font-family: sans-serif;
     }
 
@@ -15,7 +15,6 @@
       width: 80px;
       height: 40px;
       position: absolute;
-      transform-origin: center center;
       transition: transform 0.1s linear;
       cursor: pointer;
       border: 3px solid transparent;
@@ -37,8 +36,8 @@
 
     .road {
       position: absolute;
-      background-color: #ccc;
-      border: 1px dashed #999;
+      background-color: #bbb;
+      border: 1px dotted #999;
       z-index: 1;
     }
 
@@ -58,26 +57,22 @@
 <div id="message">성공!</div>
 
 <!-- 복잡한 도로 구조 -->
-<div class="road" style="top: 100px; left: 100px; width: 600px; height: 60px;"></div>
-<div class="road" style="top: 300px; left: 200px; width: 500px; height: 60px;"></div>
-<div class="road" style="top: 100px; left: 600px; width: 60px; height: 260px;"></div>
-<div class="road" style="top: 300px; left: 600px; width: 60px; height: 200px;"></div>
-<div class="road" style="top: 450px; left: 300px; width: 360px; height: 60px;"></div>
+<div class="road" style="top:100px; left:100px; width:1000px; height:80px;"></div>
+<div class="road" style="top:180px; left:1020px; width:80px; height:300px;"></div>
+<div class="road" style="top:400px; left:100px; width:1000px; height:80px;"></div>
+<div class="road" style="top:180px; left:100px; width:80px; height:220px;"></div>
+<div class="road" style="top:260px; left:300px; width:600px; height:80px;"></div>
+<div class="road" style="top:340px; left:300px; width:80px; height:60px;"></div>
 
 <script>
-  const screenWidth = window.innerWidth;
-  const screenHeight = window.innerHeight;
   const carW = 80, carH = 40;
   const speed = 3;
-
   const colors = ['red', 'blue', 'green'];
-  const cars = [];
-  const goals = [];
-  let currentPlayerIndex = 0;
+  const cars = [], goals = [];
   const keysPressed = {};
   const arrived = new Set();
+  let currentPlayerIndex = 0;
 
-  // 도로 구간 정보 수집
   const roadRects = Array.from(document.querySelectorAll('.road')).map(el => ({
     x: el.offsetLeft,
     y: el.offsetTop,
@@ -85,12 +80,12 @@
     h: el.offsetHeight
   }));
 
-  function isOnRoad(x, y, w, h) {
+  function isFullyOnRoad(x, y, w, h) {
     return roadRects.some(road =>
-      x + w > road.x &&
-      x < road.x + road.w &&
-      y + h > road.y &&
-      y < road.y + road.h
+      x >= road.x &&
+      x + w <= road.x + road.w &&
+      y >= road.y &&
+      y + h <= road.y + road.h
     );
   }
 
@@ -99,7 +94,7 @@
     const goal = document.createElement("div");
     goal.className = "goal";
     goal.style.backgroundColor = color;
-    goal.style.left = `${screenWidth - 150}px`;
+    goal.style.left = "1750px";
     goal.style.top = `${100 + i * 150}px`;
     document.body.appendChild(goal);
     goals.push({ color, el: goal });
@@ -110,7 +105,7 @@
     const car = document.createElement("div");
     car.className = "car";
     car.style.backgroundColor = color;
-    car.style.left = `120px`;
+    car.style.left = "120px";
     car.style.top = `${110 + i * 60}px`;
     document.body.appendChild(car);
 
@@ -119,7 +114,8 @@
       color,
       x: 120,
       y: 110 + i * 60,
-      vx: 0, vy: 0
+      vx: 0,
+      vy: 0
     };
 
     car.addEventListener("click", () => {
@@ -133,11 +129,10 @@
 
   cars[currentPlayerIndex].el.classList.add("selected");
 
-  // 키 입력 처리
+  // 키 입력
   document.addEventListener("keydown", e => {
     keysPressed[e.key.toLowerCase()] = true;
   });
-
   document.addEventListener("keyup", e => {
     delete keysPressed[e.key.toLowerCase()];
   });
@@ -159,7 +154,8 @@
     const nextX = car.x + vx * speed;
     const nextY = car.y + vy * speed;
 
-    if (isOnRoad(nextX, nextY, carW, carH)) {
+    // 도로 위에 있을 때만 이동
+    if (isFullyOnRoad(nextX, nextY, carW, carH)) {
       car.x = nextX;
       car.y = nextY;
     }
@@ -167,7 +163,7 @@
     car.el.style.left = `${car.x}px`;
     car.el.style.top = `${car.y}px`;
 
-    // 목표지 도착 체크
+    // 도착 체크
     goals.forEach(goal => {
       if (car.color === goal.color && !arrived.has(car.color)) {
         const gx = goal.el.offsetLeft;
